Options for CLI fixed